minor fixes and fixed the structure and some structurakl changes